Mudança para o modelo DDD

--- a/Asp.NetAT/Views/Musico/Index.cshtml
+++ b/Asp.NetAT/Views/Musico/Index.cshtml
@@ -40,7 +40,7 @@
                 @Html.DisplayFor(modelItem => item.Nascimento)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.Banda.Id)
+                @Html.DisplayFor(modelItem => item.Banda.Nome)
             </td>
             <td>
                 <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
