--- a/Asp.NetAT/Views/Musico/Create.cshtml
+++ b/Asp.NetAT/Views/Musico/Create.cshtml
@@ -29,7 +29,9 @@
             </div>
             <div class="form-group">
                 <label asp-for="BandaId" class="control-label"></label>
-                <select asp-for="BandaId" class ="form-control" asp-items="ViewBag.BandId"></select>
+                <select asp-for="BandaId" class="form-control" asp-items="ViewBag.Bandas">
+                    <option selected value="">Escolha uma banda</option>
+                </select>
             </div>
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
