--- a/Asp.NetAT/Views/Musico/Details.cshtml
+++ b/Asp.NetAT/Views/Musico/Details.cshtml
@@ -32,7 +32,7 @@
             @Html.DisplayNameFor(model => model.Banda)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Banda.Id)
+            @Html.DisplayFor(model => model.Banda.Nome)
         </dd>
     </dl>
 </div>
