--- a/Asp.NetAT/Views/Musico/Edit.cshtml
+++ b/Asp.NetAT/Views/Musico/Edit.cshtml
@@ -30,7 +30,7 @@
             </div>
             <div class="form-group">
                 <label asp-for="BandaId" class="control-label"></label>
-                <select asp-for="BandaId" class="form-control" asp-items="ViewBag.BandaId"></select>
+                <select asp-for="BandaId" class="form-control" asp-items="ViewBag.Bandas"></select>
                 <span asp-validation-for="BandaId" class="text-danger"></span>
             </div>
             <div class="form-group">
