--- a/Asp.NetAT/Views/Banda/Details.cshtml
+++ b/Asp.NetAT/Views/Banda/Details.cshtml
@@ -1,4 +1,4 @@
-﻿@model Domain.Model.Models.BandaModel
+﻿@model BandaViewModel
 
 @{
     ViewData["Title"] = "Details";
@@ -10,37 +10,78 @@
     <h4>BandaModel</h4>
     <hr />
     <dl class="row">
-        <dt class = "col-sm-2">
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.Nome)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.Nome)
         </dd>
-        <dt class = "col-sm-2">
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.InicioBanda)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.InicioBanda)
         </dd>
-        <dt class = "col-sm-2">
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.GeneroMusical)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.GeneroMusical)
         </dd>
-        <dt class = "col-sm-2">
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.Nacionalidade)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.Nacionalidade)
         </dd>
-        <dt class = "col-sm-2">
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.FazendoShow)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.FazendoShow)
         </dd>
     </dl>
+
+    <table class="table">
+        <thead>
+            <tr>
+                <th>
+                    @Html.DisplayNameFor(model => model.Musicos.First().Nome)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.Musicos.First().SobreNome)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.Musicos.First().Nascimento)
+                </th>
+
+                <th></th>
+            </tr>
+        </thead>
+        <tbody>
+            @foreach (var item in Model.Musicos)
+            {
+                <tr>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.Nome)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.SobreNome)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.Nascimento)
+                    </td>
+
+                    <td>
+                        <a asp-controller="Musico" asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
+                        <a asp-controller="Musico" asp-action="Details" asp-route-id="@item.Id">Details</a> |
+                        <a asp-controller="Musico" asp-action="Delete" asp-route-id="@item.Id">Delete</a>
+                    </td>
+                </tr>
+            }
+        </tbody>
+    </table>
+
 </div>
 <div>
     <a asp-action="Edit" asp-route-id="@Model.Id">Edit</a> |
